# ProjectMind-AI

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.toml  requirements-ci.txt
.github/actions/projectmind-health-gate/: action.yml
.github/workflows/: ci.yml  publish.yml
backend/: version.py
backend/agents/: code_editor.py  graph.py  nodes.py  orchestration.py  state.py
backend/agents/specialized/: base.py  bugfix.py  devops.py  docs.py  performance.py  planner.py  refactor.py  testing.py
backend/api/: main.py
backend/api/routes/: adr.py  advisor.py  agents.py  analyze.py  architecture.py  brain.py  code_edit.py  compress.py  cost.py  deps.py  discovery.py  execution.py  explain.py  git_intel.py  github_app.py  graph.py  health.py  intelligence.py  memory.py  models.py  onboarding.py  prompt.py  providers.py  review.py  specialized.py  tracer.py
backend/ci/: gate.py
backend/core/: token_stats.py
backend/core/adr/: generator.py
backend/core/advisor/: advisor.py
backend/core/analyzer/: ast_parser.py  cache.py  dead_code.py  dependency.py  duplicates.py  reporter.py  security.py
backend/core/brain/: indexer.py  schema.py  store.py
backend/core/changelog/: semantic.py
backend/core/compression/: budget.py  compressor.py  exporter.py
backend/core/cost/: optimizer.py  schema.py  store.py
backend/core/diff/: comparator.py  snapshots.py
backend/core/discovery/: ide_detector.py  local_detector.py  mcp_detector.py  os_detector.py  profiler.py  schema.py
backend/core/dna/: extractor.py  generator.py
backend/core/execution/: parser.py  schema.py  store.py
backend/core/explain/: generator.py
backend/core/git_intel/: analyzer.py  classifier.py  risk.py  schema.py  store.py
backend/core/graph/: builder.py  queries.py  serializer.py
backend/core/intelligence/: agent_memory.py  architecture.py  brain.py  decisions.py  knowledge_graph.py  schema.py  vector_memory.py
backend/core/memory/: schema.py  store.py  vector_store.py
backend/git/: github.py  gitlab.py
backend/llm/: catalog.py  litellm_gateway.py  providers.py  router.py
backend/mcp/: server.py
backend/vector/: embeddings.py  store.py
cli/: main.py
docs/: API_DESIGN.md  COMPONENTS.md  DATABASE_SCHEMA.md  ROADMAP.md  SCALABILITY_PLAN.md  SYSTEM_ARCHITECTURE.md
docs/integrations/: mcp_config.example.json
docs/project-analysis/: agent-map.md  api-map.md  architecture.md  database-map.md  dependency-graph.md  feature-map.md  migration-plan.md  risk-analysis.md  service-map.md
frontend/: package-lock.json  package.json  tailwind.config.ts
plugins/: __init__.py  base.py
plugins/claude_code/: __init__.py
plugins/cline/: __init__.py
plugins/continue_dev/: __init__.py
plugins/cursor/: __init__.py
plugins/custom/: __init__.py
plugins/local/: __init__.py
plugins/vscode/: __init__.py
plugins/windsurf/: __init__.py
scripts/: generate_icon.py
tests/: conftest.py  test_brain.py  test_discovery.py  test_health.py  test_providers.py
vscode-extension/: LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  projectmindClient.ts
(+31 files in other folders)
