[tool.poetry]
name = "llm-reviewer"
version = "0.2.0"
description = "The persistent memory layer for AI coding agents"
authors = ["Aarav Khanal"]
homepage = "https://github.com/Aaravkhanal/llm-reviewer"
repository = "https://github.com/Aaravkhanal/llm-reviewer"
documentation = "https://github.com/Aaravkhanal/llm-reviewer#readme"
keywords = ["ai", "llm", "code-review", "developer-tools", "memory", "context-compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "cli" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

# --- Web framework ---
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.17"

# --- Database / memory ---
sqlmodel = "^0.0.22"

# --- CLI ---
click = "^8.1.7"

# --- LLM providers (core) ---
langchain = "^0.3.6"
langchain-core = "^0.3.0"
langchain-community = "^0.3.5"
langchain-openai = "^0.3.17"
langchain-anthropic = "^0.3.10"
langchain-text-splitters = "^0.3.8"

# --- LLM providers (optional) ---
langchain-ollama = "^0.3.2"

# --- Vector store ---
chromadb = "^0.6.3"
langchain-chroma = "^0.2.1"

# --- Templates ---
jinja2 = "^3.1.4"

# --- Graph ---
networkx = "^3.4.2"

# --- MCP server ---
mcp = "^1.0.0"

# --- Multi-agent orchestration ---
langgraph = "^1.0.0"

# --- Git integrations ---
PyGithub = "^2.1.1"
python-gitlab = "^5.6.0"

# --- File watcher ---
watchdog = "^4.0.0"

# --- BYOK universal gateway ---
litellm = "^1.70.0"

# --- BYOK key encryption ---
cryptography = "^44.0.0"

# --- Observability ---
langfuse = {version = "^2.0.0", optional = true}
opentelemetry-api = {version = "^1.27.0", optional = true}
opentelemetry-sdk = {version = "^1.27.0", optional = true}

# --- Utilities ---
python-dotenv = "^1.0.1"

# --- Testing ---
pytest = "^8.0.0"
httpx = "^0.27.0"

[tool.poetry.extras]
# pip install projectmind[huggingface]  — local embeddings via HF models
huggingface = ["langchain-huggingface", "hf-xet"]
# pip install projectmind[observability]  — Langfuse + OpenTelemetry tracing
observability = ["langfuse", "opentelemetry-api", "opentelemetry-sdk"]
# pip install projectmind[intelligence]  — Phase 21-23: KuzuDB graph + LanceDB vectors
intelligence = ["kuzu", "lancedb"]

[tool.poetry.dependencies.langchain-huggingface]
version = "^0.2.0"
optional = true

[tool.poetry.dependencies.hf-xet]
version = "^1.1.2"
optional = true

[tool.poetry.dependencies.kuzu]
version = ">=0.7.0"
optional = true

[tool.poetry.dependencies.lancedb]
version = ">=0.13.0"
optional = true

[tool.poetry.scripts]
projectmind = "cli.main:cli"
serve = "backend.api.main:start"
projectmind-mcp = "backend.mcp.server:run"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
